--- a/.github/workflows/provision_ec2_tag.yml
+++ b/.github/workflows/provision_ec2_tag.yml
@@ -31,7 +31,7 @@ jobs:
         uses: newrelic/fargate-runner-action@main
         with:
           aws_region: us-east-2
-          container_make_target: "terraform/provision-ec2 TF_VAR_inventory_output='/srv/runner/inventory/${{ env.TAG_OR_UNIQUE_NAME }}/inventory.ec2'  TAG_OR_UNIQUE_NAME=${{ env.TAG_OR_UNIQUE_NAME }}"
+          container_make_target: "terraform/provision-ec2 TF_VAR_inventory_output='/srv/runner/inventory/${{ env.TAG_OR_UNIQUE_NAME }}-inventory.ec2'  TAG_OR_UNIQUE_NAME=${{ env.TAG_OR_UNIQUE_NAME }}"
           ecs_cluster_name: caos_otel_releases
           task_definition_name: otel-releases-td
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
@@ -51,7 +51,7 @@ jobs:
         uses: newrelic/fargate-runner-action@main
         with:
           aws_region: us-east-2
-          container_make_target: "test/packaging ANSIBLE_INVENTORY_FOLDER='/srv/runner/inventory/${{ env.TAG_OR_UNIQUE_NAME }}' ANSIBLE_INVENTORY_FILE='inventory.ec2' LIMIT=testing_hosts_linux"
+          container_make_target: "test/packaging ANSIBLE_INVENTORY_FOLDER='/srv/runner/inventory/' ANSIBLE_INVENTORY_FILE='${{ env.TAG_OR_UNIQUE_NAME }}-inventory.ec2' LIMIT=testing_hosts_linux"
           ecs_cluster_name: caos_otel_releases
           task_definition_name: otel-releases-td
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
