--- a/test/packaging/ansible/installation-pinned.yaml
+++ b/test/packaging/ansible/installation-pinned.yaml
@@ -6,6 +6,10 @@
   gather_facts: yes
 
   pre_tasks:
+    - name: Update package repositories
+      include_role:
+        name: caos.ansible_roles.package_repo_update
+
     - name: Initial cleanup # Only required for shared infra.
       include_role:
         name: cleanup
