--- a/.github/workflows/provision_ec2_tag.yml
+++ b/.github/workflows/provision_ec2_tag.yml
@@ -28,7 +28,7 @@ jobs:
           aws-region: us-east-2
 
       - name: Provision infra
-        uses: newrelic/fargate-runner-action@main
+        uses: newrelic/fargate-runner-action@fix_ecs_path
         with:
           aws_region: us-east-2
           container_make_target: "terraform/provision-ec2 TF_VAR_inventory_output=/srv/runner/inventory/${{ env.TAG_OR_UNIQUE_NAME }}-inventory.ec2 TAG_OR_UNIQUE_NAME=${{ env.TAG_OR_UNIQUE_NAME }}"
@@ -48,7 +48,7 @@ jobs:
             ok=\d+\s+changed=\d+\s+unreachable=\d+\s+failed=\d+\s+skipped=\d+\s+rescued=\d+\s+ignored=\d+
 
       - name: Run packaging tests
-        uses: newrelic/fargate-runner-action@main
+        uses: newrelic/fargate-runner-action@fix_ecs_path
         with:
           aws_region: us-east-2
           container_make_target: "test/packaging ANSIBLE_INVENTORY_FOLDER='/srv/runner/inventory/' ANSIBLE_INVENTORY_FILE='${{ env.TAG_OR_UNIQUE_NAME }}-inventory.ec2' LIMIT=testing_hosts_linux"
