--- a/distributions/nr-otel-collector/nr-otel-collector.conf
+++ b/distributions/nr-otel-collector/nr-otel-collector.conf
@@ -1,5 +1,9 @@
 # Systemd environment file for the nr-otel-collector service
 
+# New Relic default variables
+OTEL_EXPORTER_OTLP_ENDPOINT=otlp.nr-data.net:4317
+NEW_RELIC_MEMORY_LIMIT_MIB=100
+
 # Command-line options for the nr-otel-collector service.
 # Run `/usr/bin/nr-otel-collector --help` to see all available options.
 OTELCOL_OPTIONS="--config=/etc/nr-otel-collector/config.yaml"
