--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Set and validate distribution name and version
         run: .github/workflows/scripts/set_version.sh
 
-      - uses: docker/setup-qemu-action@v2
-
-      - uses: docker/setup-buildx-action@v2
+#      - uses: docker/setup-qemu-action@v2
+#
+#      - uses: docker/setup-buildx-action@v2
 
       - uses: actions/setup-go@v3
         with:
@@ -33,11 +33,11 @@ jobs:
       - name: Generate distribution sources
         run: make generate-sources
 
-      - name: Log into Docker.io
-        uses: docker/login-action@v2
-        with:
-          username: ${{secrets.CAOS_DOCKER_HUB_ID}}
-          password:  ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
+#      - name: Log into Docker.io
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{secrets.CAOS_DOCKER_HUB_ID}}
+#          password:  ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
 
       - name: Build binaries & packages with GoReleaser
         uses: goreleaser/goreleaser-action@v4
