--- a/configs/nr-otel-collector-agent.yaml
+++ b/configs/nr-otel-collector-agent.yaml
@@ -135,7 +135,7 @@ processors:
   # used to prevent out of memory situations on the collector
   memory_limiter:
     check_interval: 1s
-    limit_mib: ${NEW_RELIC_MEMORY_LIMIT_MIB}
+    limit_mib: 100
 
   batch:
 
@@ -162,11 +162,6 @@ processors:
 exporters:
   logging:
     verbosity: detailed
-  otlp:
-    endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT}
-    headers:
-      api-key: ${NEW_RELIC_LICENSE_KEY}
-
 
 service:
   pipelines:
@@ -188,6 +183,6 @@ service:
         - resourcedetection
         - resource
         - cumulativetodelta
-      exporters: [logging,otlp]
+      exporters: [logging]
 
   extensions: [health_check]
