test all machines

--- a/.github/workflows/provision_ec2_tag.yml
+++ b/.github/workflows/provision_ec2_tag.yml
@@ -27,25 +27,25 @@ jobs:
           role-to-assume: ${{ env.AWS_ASSUME_ROLE }}
           aws-region: us-east-2
 
-      # - name: Provision infra
-      #   uses: newrelic/fargate-runner-action@main
-      #   with:
-      #     aws_region: us-east-2
-      #     container_make_target: "terraform/provision-ec2 TF_VAR_inventory_output=/srv/runner/inventory/${{ env.TAG_OR_UNIQUE_NAME }}-inventory.ec2 TAG_OR_UNIQUE_NAME=${{ env.TAG_OR_UNIQUE_NAME }}"
-      #     ecs_cluster_name: caos_otel_releases
-      #     task_definition_name: otel-releases-td
-      #     cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
-      #     cloud_watch_logs_stream_name: ecs/test-otel-releases
-      #     aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
-      #     repo_name: "newrelic/opentelemetry-collector-releases"
-      #     ref: "terraform_ec2"
-      #     log_filters: |
-      #       \[ALLOW_MSG\].+
-      #       TASK\s\[.*\]\s
-      #       PLAY\s\[.*\]\s
-      #       PLAY\sRECAP\s
-      #       Apply\scomplete!
-      #       ok=\d+\s+changed=\d+\s+unreachable=\d+\s+failed=\d+\s+skipped=\d+\s+rescued=\d+\s+ignored=\d+
+      - name: Provision infra
+        uses: newrelic/fargate-runner-action@main
+        with:
+          aws_region: us-east-2
+          container_make_target: "terraform/provision-ec2 TF_VAR_inventory_output=/srv/runner/inventory/${{ env.TAG_OR_UNIQUE_NAME }}-inventory.ec2 TAG_OR_UNIQUE_NAME=${{ env.TAG_OR_UNIQUE_NAME }}"
+          ecs_cluster_name: caos_otel_releases
+          task_definition_name: otel-releases-td
+          cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
+          cloud_watch_logs_stream_name: ecs/test-otel-releases
+          aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
+          repo_name: "newrelic/opentelemetry-collector-releases"
+          ref: "terraform_ec2"
+          log_filters: |
+            \[ALLOW_MSG\].+
+            TASK\s\[.*\]\s
+            PLAY\s\[.*\]\s
+            PLAY\sRECAP\s
+            Apply\scomplete!
+            ok=\d+\s+changed=\d+\s+unreachable=\d+\s+failed=\d+\s+skipped=\d+\s+rescued=\d+\s+ignored=\d+
 
       - name: Run packaging tests
         uses: newrelic/fargate-runner-action@main
