--- a/ci/terraform/caos.auto.tfvars.dist
+++ b/ci/terraform/caos.auto.tfvars.dist
@@ -1,5 +1,5 @@
 ec2_otels = {
-  "otel-TAG_OR_UNIQUE_NAME-amd64-ubuntu22.04" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:ubuntu22.04" = {
     ami             = "ami-0aeb7c931a5a61206"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -11,7 +11,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-ubuntu20.04" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:ubuntu20.04" = {
     ami             = "ami-03b6c8bd55e00d5ed"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -23,7 +23,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-ubuntu18.04" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:ubuntu18.04" = {
     ami             = "ami-0600b1bef20a0c212"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -35,7 +35,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-ubuntu22.04" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:ubuntu22.04" = {
     ami             = "ami-0717cbd2f49a61ed0"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -47,7 +47,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-ubuntu20.04" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:ubuntu20.04" = {
     ami             = "ami-0b0c8ae527978b689"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -59,7 +59,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-ubuntu18.04" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:ubuntu18.04" = {
     ami             = "ami-09ee3570b9d8bc8cc"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -71,7 +71,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-centos7" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:centos7" = {
     ami             = "ami-00f8e2c955f7ffa9b"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -83,7 +83,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-centos8" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:centos8" = {
     ami             = "ami-0ac6967966621d983"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -95,7 +95,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-centos-stream" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:centos-stream" = {
     ami             = "ami-0d97ef13c06b05a19"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -107,7 +107,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-centos7" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:centos7" = {
     ami             = "ami-07f692d95b2b9c8c5"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -119,7 +119,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-centos8" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:centos8" = {
     ami             = "ami-035734c938e7da7af"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -131,7 +131,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-centos-stream" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:centos-stream" = {
     ami             = "ami-0deb895048c4f105b"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -143,7 +143,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-sles-12.5" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:sles-12.5" = {
     ami             = "ami-05f6084a6b524a8f0"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -155,7 +155,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-sles-15.2" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:sles-15.2" = {
     ami             = "ami-0b14d12cfa5e9dcc5"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -167,7 +167,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-sles-15.3" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:sles-15.3" = {
     ami             = "ami-055742ec92937ec3e"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -179,7 +179,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-sles-15.4" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:sles-15.4" = {
     ami             = "ami-0ca19ecee2be612fc"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -191,7 +191,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-sles-15.2" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:sles-15.2" = {
     ami             = "ami-0ccf2efb4e042d474"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -203,7 +203,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-sles-15.3" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:sles-15.3" = {
     ami             = "ami-075a486be6269029f"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -215,7 +215,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-sles-15.4" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:sles-15.4" = {
     ami             = "ami-0885abe5302e6fee0"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -227,7 +227,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-redhat-7.9" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:redhat-7.9" = {
     ami             = "ami-0680f7cf1ea8cb793"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -239,7 +239,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-redhat-8.4" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:redhat-8.4" = {
     ami             = "ami-0ba62214afa52bec7"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -251,7 +251,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-redhat-9.0" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:redhat-9.0" = {
     ami             = "ami-078cbc4c2d057c244"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -263,7 +263,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-redhat-7.6" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:redhat-7.6" = {
     ami             = "ami-0302c1ecc74930ba5"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -275,7 +275,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-redhat-9.0" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:redhat-9.0" = {
     ami             = "ami-01089181b0aa3be51"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -287,7 +287,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-debian-stretch" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:debian-stretch" = {
     ami             = "ami-0d6d3e4f081c69f42"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -299,7 +299,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-debian-buster" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:debian-buster" = {
     ami             = "ami-0f42acddbf04bd1b6"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -311,7 +311,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-debian-bullseye" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:debian-bullseye" = {
     ami             = "ami-08a0dab67e025361b"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -323,7 +323,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-debian-stretch" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:debian-stretch" = {
     ami             = "ami-0cc41fb90199e2764"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -335,7 +335,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-debian-buster" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:debian-buster" = {
     ami             = "ami-07d2054a4befc97f7"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -347,7 +347,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-debian-bullseye" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:debian-bullseye" = {
     ami             = "ami-03cabbbc935f5826f"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -359,7 +359,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-al-2" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:al-2" = {
     ami             = "ami-077e31c4939f6a2f3"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -371,7 +371,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-al-2" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:al-2" = {
     ami             = "ami-07a3e3eda401f8caa"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -383,7 +383,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-amd64-al-2022" = {
+  "otel-TAG_OR_UNIQUE_NAME-amd64:al-2022" = {
     ami             = "ami-09a0187acf6bdfe59"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
@@ -395,7 +395,7 @@ ec2_otels = {
       "otel_role" = "agent"
     }
   }
-  "otel-TAG_OR_UNIQUE_NAME-arm64-al-2022" = {
+  "otel-TAG_OR_UNIQUE_NAME-arm64:al-2022" = {
     ami             = "ami-0d20d440a115a6737"
     subnet          = "subnet-09b64de757828cdd4"
     security_groups = ["sg-044ef7bc34691164a"]
