move to shared roles

--- a/test/provision/terraform/install-requirements.yml
+++ b/test/provision/terraform/install-requirements.yml
@@ -7,22 +7,37 @@
   tasks:
     - name: Remove EOL repository sources
       include_role:
-        name: remove-eol-sources
+        name: caos.ansible_roles.remove_eol_sources
 
     - name: install python
       include_role:
-        name: install-python
+        name: caos.ansible_roles.install_python
+
+    - name: Install Libcap
+      include_role:
+        name: caos.ansible_roles.install_libcap
 
     - name: Install GPG
       include_role:
-        name: install-gpg
+        name: caos.ansible_roles.install_gpg
 
 - hosts: testing_hosts_linux
   become: true
   gather_facts: yes
 
   tasks:
+    - name: Configure logrotate
+      include_role:
+        name: caos.ansible_roles.logrotate
 
     - name: Configure hostname
       include_role:
-        name: hostname
+        name: caos.ansible_roles.hostname
+
+- hosts: testing_hosts_windows
+  gather_facts: yes
+
+  tasks:
+    - name: Configure hostname
+      include_role:
+        name: caos.ansible_roles.hostname
