--- a/test/packaging/ansible/installation-pinned.yaml
+++ b/test/packaging/ansible/installation-pinned.yaml
@@ -34,6 +34,13 @@
               - exec: "nr-otel-collector --version"
                 version: "0.0.10"
 
+        - name: assert ownership
+          include_role:
+            name: assert_ownership
+          vars:
+            ownership_process: "nr-otel-collector"
+            ownership_files: "root"
+
       always:
         - name: Final cleanup # Only required for shared infra.
           include_role:
