NR-83104 : run infra with terraform (#11)
* add tfvars for canaries

* update terraform

* run terraform

* trigger pipeline

* fix logstream name

* add reference to clone

* remove action_id

* add empty playbook

* fix playbook

* add dist for tfvars

* add destroy step

* run packaging tests

* fix tests

* fix ansible module

* fix inventory

* change inventory file

* update inventory file

* test

* check inventory output variable

* ci: remove single quotes

* feat: referesh apt roles

* feat: remove final cleanup

* feat: use fix_service_name branch for roles

* feat cleanup correct service

* feat: do not remove service file

service file is already removed by package uninstallation

* feat: remove final cleanup

* test latest version

* Terraform ec2 all (#20)

* enable all ec2 instances

* bump sles AMIs

* test all machines

* add python

* add install requirements

* change uniq key

* update uniq key

* add missing roles

* fix hostnames

* remove debian stretch testing AMIs

* feat: move ci to test/provision directory (#22)

* feat: move ci to test/provision directory

* fix: destroy make target

* remove caos.auto.tfvars

* Terraform ec2 roles (#24)

* move to shared roles

* add branch name

* ci: provision and packaging as GHA component (#25)

* ci: provision and packaging as GHA component

* remove local provision roles

* ci: add destroy filter for provision

* point to master

* small fix in playbook

* fix ci

---------

Co-authored-by: Roger Coll <rogercoll@protonmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ dist/
 .generated-yaml/
 .vscode
 **/.terraform*
-
+ci/terraform/terraform.backend.tf
+inventory
+ci/terraform/caos.auto.tfvars
 # Local .terraform directories
 **/.terraform/*
 # .tfstate files
