--- a/test/packaging/ansible/roles/cleanup/tasks/main.yaml
+++ b/test/packaging/ansible/roles/cleanup/tasks/main.yaml
@@ -8,10 +8,9 @@
       - /etc/nr-otel-collector/nr-otel-collector.conf
       - /etc/nr-otel-collector/config.yaml
       - /etc/nr-otel-collector
-      - /lib/systemd/system/nr-otel-collector.service
       - /usr/bin/nr-otel-collector
     packages_to_cleanup:
       - nr-otel-collector
     services_to_stop:
-      - nr-otel-collector
+      - nr-otel-collector.service
 ...
