NR-83112 : provision canaries ec2

--- a/test/provision/Makefile
+++ b/test/provision/Makefile
@@ -4,7 +4,14 @@ ifndef TAG_OR_UNIQUE_NAME
 	$(error TAG_OR_UNIQUE_NAME is undefined)
 endif
 	sed "s/TAG_OR_UNIQUE_NAME/${TAG_OR_UNIQUE_NAME}/g" "$(CURDIR)/test/provision/terraform/terraform.backend.tf.dist" > "$(CURDIR)/test/provision/terraform/terraform.backend.tf"
-	sed "s/TAG_OR_UNIQUE_NAME/${TAG_OR_UNIQUE_NAME}/g" "$(CURDIR)/test/provision/terraform/caos.auto.tfvars.dist" > "$(CURDIR)/test/provision/terraform/caos.auto.tfvars"
+
+.PHONY: terraform/prepare_ec2_list-linux
+terraform/prepare_ec2_list-linux:
+ifndef TAG_OR_UNIQUE_NAME
+	$(error TAG_OR_UNIQUE_NAME is undefined)
+endif
+	sed "s/TAG_OR_UNIQUE_NAME/${TAG_OR_UNIQUE_NAME}/g" "$(CURDIR)/test/provision/terraform/caos-linux.auto.tfvars.dist" > "$(CURDIR)/test/provision/terraform/caos.auto.tfvars"
+
 
 .PHONY: ansible/requirements
 ansible/requirements:
@@ -14,8 +21,8 @@ ansible/requirements:
 terraform/clean:
 	rm "$(CURDIR)/test/provision/terraform/terraform.backend.tf" "$(CURDIR)/test/provision/terraform/caos.auto.tfvars"
 
-.PHONY: test/provision
-test/provision: terraform/backend ansible/requirements
+.PHONY: test/provision-linux
+test/provision-linux: terraform/backend terraform/prepare_ec2_list-linux ansible/requirements
 	cd "$(CURDIR)/test/provision/terraform" && \
 	terraform init -reconfigure && \
 	terraform apply -auto-approve
